objects/Occupancy_History__c.object
<CustomObject>
    <label>Occupancy History</label>
    <nameField>
        <label>Occupancy History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Occupancy Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Occupied</fullName>
                </value>
                <value>
                    <fullName>Vacant</fullName>
                </value>
                <value>
                    <fullName>Reserved</fullName>
                </value>
                <value>
                    <fullName>Unavailable</fullName>
                </value>
                <value>
                    <fullName>On Notice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apartment__c</fullName>
        <label>Apartment</label>
        <referenceTo>Unit__c</referenceTo>
        <relationshipLabel>Occupancy Histories</relationshipLabel>
        <relationshipName>Occupancy_Histories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Move_In_Date__c</fullName>
        <label>Move In Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Snapshot_Date__c</fullName>
        <label>Snapshot Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Second_Resident__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Second Resident</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Occupancy Histories (Second Resident)</relationshipLabel>
        <relationshipName>Occupancy_Histories1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Resident__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Resident</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Occupancy Histories</relationshipLabel>
        <relationshipName>Occupancy_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>